--- a/dal/app/views/Application/index.html
+++ b/dal/app/views/Application/index.html
@@ -3,8 +3,9 @@
 
 <style>
 
-.listing a:link { text-decoration: none; font-weight:bold; color:black; font-size: 1.1em;}
+.tablesorter a:link { text-decoration: none; font-weight:bold; color:black; font-size: 1.1em;}
 
+.tablesorter td {vertical-align: center;}
 
 </style>
 
@@ -48,7 +49,7 @@ sus carreras.</p>
 
 <div id="container" style="height:640px;">
 	<div class="pane ui-layout-center">
-		<table class="listing">
+		<table class="tablesorter" id="myTable">
 			<thead>
 				<tr>
 					<th>Nombre</th>
@@ -62,8 +63,8 @@ sus carreras.</p>
 					<tr>
 						<td><img align="absmiddle" src="../public/images/icons/s-area${area.id}.png"/> <a href="javascript:void cargarCarrera(${carrera.id})">${carrera.nombre}</a></td>
 						<td>${carreraTipoInst.tipoInst.toLowerCase().capitalizeWords()}</td>
-						<td> <span class="inlinesparkline">${carreraTipoInst.stringEmpleabilidad}</span></td>
-						<td><span style="height:16px; width:${carreraTipoInst.pixelsEmpleabilidad}px"></span>${carreraTipoInst.ultEmpleabilidad.valor}</td>
+						<td><span class="inlinesparkline">${carreraTipoInst.stringEmpleabilidad}</span></td>
+						<td><div style="border:solid 1px black; background-color:#EC6400; color:white;height:16px; width:${carreraTipoInst.pixelsEmpleabilidad}px">${carreraTipoInst.ultEmpleabilidad.valor}</div></td>
 					</tr>
 				#{/list}
 			#{/list}
@@ -76,7 +77,7 @@ sus carreras.</p>
 <script>	
 	$(document).ready(function () {
 		$('#container').layout({ east: {size: "300"} });
-		$('.inlinesparkline').sparkline('html', {chartRangeMin: 0, chartRangeMax:1, width: "80px", height: "40px; "}); 
+		$('.inlinesparkline').sparkline('html', {lineColor: "#000", fillColor: "#EC6400", chartRangeMin: 0, chartRangeMax:1, width: "60px", height: "30px; "}); 
 		
 	});
 	
@@ -94,3 +95,13 @@ sus carreras.</p>
 </script>
 
 
+
+<script type="text/javascript">
+  
+$(document).ready(function() 
+    { 
+        $("#myTable").tablesorter(); 
+    } 
+); 
+    
+</script>
