--- a/dal/app/views/main.html
+++ b/dal/app/views/main.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/tabs-menu.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/tablas-formato-blanco.css'}">
-        
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/style.css'}">
 	
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
@@ -24,9 +24,13 @@
 <script src="@{'/public/jquery/jquery.sparkline.min.js'}"
 	type="text/javascript"></script>
 
-        
+<script src="@{'/public/jquery/jquery.tablesorter.min.js'}"
+	type="text/javascript"></script>
+
+       
 <link rel="stylesheet" media="screen"
 	href="@{'/public/stylesheets/jquery-layout.css'}" />
+
         
         #{get 'moreScripts' /}
     </head>
