--- a/dal/app/views/Application/detalleCarrera.html
+++ b/dal/app/views/Application/detalleCarrera.html
@@ -1,6 +1,6 @@
 
 
-<div style="font-size:1.2em; font-weight: bold;padding: 0.5em 0;">${carreraTipoInst.nombre}</div>
+<div style="font-size:1.2em; font-weight: bold;padding: 0.5em 0;">${carreraTipoInst.nombre} <em>(${carreraTipoInst.tipoInst.toLowerCase().capitalizeWords()})</em> </div>
 
 <div id="chartSueldos" style="height:200px;width:300px; "></div>
 <div style="height:1em;"></div>
@@ -28,7 +28,7 @@
 						}
 					},
 					series : [ {
-						color : '#5FAB78'
+						color : '#EC6400'
 					} ]
 	});
 
@@ -47,7 +47,7 @@
 						}
 					},
 					series : [ {
-						color : '#5FAB78'
+						color : '#EC6400'
 					} ]
 	});
 				
