CONFIRMED - bug 35: Rediseñar forma de asignar profesionales http://www.welinux.cl/bugzilla/show_bug.cgi?id=35

--- a/dal/app/views/Application/detalleCarrera.html
+++ b/dal/app/views/Application/detalleCarrera.html
@@ -20,7 +20,7 @@
 		#{/list}
 		
 						 ] ], {
-					title : 'Empleabilidad dentro de los primeros años',
+					title : 'Empleabilidad ultimos 4 años',
 					axes : {
 						yaxis : {
 							min : 0,
